attempt at i18next-parser

--- a/src/locale/ja.json
+++ b/src/locale/ja.json
@@ -1,17 +1,9 @@
 {
-  "AWA": {
-    "ConfirmDescription": "アイテムを変更するには、Destiny2コンパニオンアプリを使用してDIMを承認してください。",
-    "ConfirmTitle": "操作を確認",
-    "Error": "Modまたはパークの変更でエラーが発生しました",
-    "ErrorMessage": "{{item}} に {{plug}} を装備できませんでした。\n\n{{error}}",
-    "FailedToken": "アイテムを変更する権限を取得できません",
-    "IrreversiblePlugging": "{{plug}} を所有していないため、上書きされません。"
-  },
   "Accounts": {
     "Choose": "{{bungieName}} のプロファイル",
+    "ErrorLoading": "Bungie.netからDestinyのアカウント情報をロードできません",
     "ErrorLoadInventory": "Destiny {{version}} のキャラクターと所持アイテムの情報をロードできません",
     "ErrorLoadManifest": "Bungieからのデータ読み込みに失敗しました",
-    "ErrorLoading": "Bungie.netからDestinyのアカウント情報をロードできません",
     "MissingAccountWarning": "ここに自分のアカウントが表示されない場合は、正しい Bungie.net アカウントにログインしていないか、 Bungie.net がメンテナンスでダウンしている可能性があります。",
     "MissingDescription": "表示しようとしているアカウントは、Bungie.netプロフィールにリンクされていません。以下のアカウントから選択してください。",
     "MissingTitle": "アカウントが見つかりません",
@@ -38,6 +30,14 @@
     "Unknown": "不明のアイテム",
     "WishlistedRolls_other": "{{count, number}} 個のウィッシュリストと一致しました",
     "YourItems": "所持品"
+  },
+  "AWA": {
+    "ConfirmDescription": "アイテムを変更するには、Destiny2コンパニオンアプリを使用してDIMを承認してください。",
+    "ConfirmTitle": "操作を確認",
+    "Error": "Modまたはパークの変更でエラーが発生しました",
+    "ErrorMessage": "{{item}} に {{plug}} を装備できませんでした。\n\n{{error}}",
+    "FailedToken": "アイテムを変更する権限を取得できません",
+    "IrreversiblePlugging": "{{plug}} を所有していないため、上書きされません。"
   },
   "Browsercheck": {
     "Samsung": "Samsungブラウザでは、ダーク モードがオンになっているとサイトが暗くなりすぎることがあります。ブラウザから 設定 > ラボ > Webサイトのダークテーマを使用 を有効にするか、別のブラウザに切り替えてください。",
@@ -112,8 +112,8 @@
     "Super": "スーパースキルのクールダウン: {{cooldown}}"
   },
   "Countdown": {
-    "Days_compact_other": "{{count}}日間",
-    "Days_other": "{{count}}日間"
+    "Days_other": "{{count}}日間",
+    "Days_compact_other": "{{count}}日間"
   },
   "Csv": {
     "EmptyFile": "ファイルにラインがありませんでした。",
@@ -145,12 +145,12 @@
     "Troubleshooting": "トラブルシューティングガイド"
   },
   "FarmingMode": {
+    "D2Desc_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
     "D2Desc_female_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
     "D2Desc_male_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
-    "D2Desc_other": "DIMはアイテムタイプごとに {{count}} 個の空白が常に {{store}} 個あることを確認することで、ポストマスターにアイテムが移動しないようにしています。",
+    "Desc_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへ行かないようにします。",
     "Desc_female_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへ行かないようにします。",
     "Desc_male_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへ行かないようにします。",
-    "Desc_other": "DIMはエングラムとグリマーアイテムを {{store}} から保管庫に移動し、アイテムタイプごとに {{count}} 個のスペースを開けたままにして、ポストマスターへ行かないようにします。",
     "FarmingMode": "ファーミングモード",
     "FarmingModeNote": "(ドロップのためのスペースを確保)",
     "MakeRoom": {
@@ -238,11 +238,11 @@
     "HasOrnament": "装飾品が施されているアイテムが表示されます。",
     "HasShader": "シェーダが適用されている項目を表示します。",
     "InDimLoadout": "is:ininingameloadoutはゲーム内ロードアウトで使用しているアイテムを強調表示します。",
+    "Infusable": "融合可能なアイテムを表示",
+    "InfusionFodder": "高パワーの同じアイテムとグリマーだけで融合できる、低パワーのアイテムを表示します。",
     "InInGameLoadout": "is:ininingameloadoutはゲーム内ロードアウトで使用するアイテムを表示します。",
     "InInventory": "保管庫で最低1つは所有しているアイテムを表示します。このフィルターはベンダーまたはレコードの画面でのみ有効です。",
     "InLoadout": "is:inloadout は、任意のロードアウトに含まれるアイテムを表示します。inloadout: で検索すると、タイトルが一致するロードアウトに含まれるアイテムが表示されます。ハッシュタグと一緒に使うと、inloadout: はタイトルやノートにハッシュタグが含まれるロードアウトを持つアイテムを表示します。",
-    "Infusable": "融合可能なアイテムを表示",
-    "InfusionFodder": "高パワーの同じアイテムとグリマーだけで融合できる、低パワーのアイテムを表示します。",
     "IsAdept": "熟練Modが利用できる武器を表示",
     "IsCrafted": "クラフトされた武器を表示",
     "ItemHash": "与えられた保管庫アイテムハッシュを持つアイテムを表示。上級ユーザー向け。",
@@ -263,10 +263,10 @@
     "MaxPower": "スロット毎の最大出力でアイテムを表示します。",
     "MaxPowerLoadout": "各キャラクタークラスのパワーレベルを最大化するアイテムのロードアウトを表示します。",
     "Memento": "記憶を装着したクラフト武器を表示",
-    "ModSlot": "特定の mod タイプスロットを持つ防具を表示する。",
     "Mods": {
       "Y3": "アーマー2.0のMODが選択されたアイテムを表示します。"
     },
+    "ModSlot": "特定の mod タイプスロットを持つ防具を表示する。",
     "Name": "名前がフィルターテキストと一致する (exactname:)、または部分的に一致する (name:) 項目を表示します。 引用符を使用してフレーズ全体を検索します。",
     "NamedStat": "ステータスのある防具を表示",
     "Negate": "検索結果から除外するには、\"{{notexample}}\" や \"{{notexample2}}\" のように、検索語の前にマイナス記号または \"not\" という単語を付けます。",
@@ -280,9 +280,9 @@
     "PerkName": "パークまたはModの名前が一致(exactperk:) または一部該当 (perkname:) のアイテムを表示します。引用符を使用してフレーズ全体を検索します。",
     "PinnacleReward": "強力な報酬を得られる追跡を表示",
     "Postmaster": "現在ポストマスターにあるアイテム",
+    "PowerfulReward": "強力な報酬を生み出す追跡を表示。",
     "PowerKeywords": "現在のシーズンのパワー制限を参照するには、数値の代わりにハードキャップまたはソフトキャップキーワードを使用してください。",
     "PowerLevel": "パワーレベル $t(Filter.PowerKeywords) に基づいてアイテムを表示します。",
-    "PowerfulReward": "強力な報酬を生み出す追跡を表示。",
     "PrismaticDamageType": "光または暗闇のダメージタイプのアイテムを表示します。 光はアーク、ソーラー、ボイドです。 暗闇はステイシスとストランドです。",
     "Quality": "アイテムステータスの品質により表示。'{{percentage}}'と'{{quality}}'は同じことです。",
     "RandomRoll": "ランダムロールでドロップされた項目を表示します。",
@@ -294,9 +294,9 @@
     "SearchPrompt": "利用可能なフィルタコマンドを検索",
     "Season": "Destiny 2のシーズンに登場したアイテムを表示します。",
     "Shiny": "限定版の装飾品が装着された果敢武器を表示",
+    "Stackable": "一纏め可能なアイテム(弾合成アイテム、奇妙なコインなど) を表示",
     "StackFull": "スタックに余裕があるアイテムを表示(強化のコア、奇妙なコイン、銃器技師の材料など)",
     "StackLevel": "スタック内のアイテムの量に基づいてアイテムを表示します。",
-    "Stackable": "一纏め可能なアイテム(弾合成アイテム、奇妙なコインなど) を表示",
     "StatLower": "同じ種類の防具の中で、他のアーマーよりも厳密にステータスが低い防具を表示します。",
     "Stats": "特定のステータス値に基づいてアイテムを表示します。 $t(Filter.StatsExtras)",
     "StatsBase": "装備済のModやマスターワークの増量分を含まず、基礎のステータス値に基づいてアーマーをフィルタリングします。$t(Filter.StatsExtras)",
@@ -360,7 +360,7 @@
     "Clear": "フィルターをクリア",
     "CompareMatching": "アイテムを比較する",
     "DeleteSearch": "検索の削除",
-    "FilterHelp": "検索　アイテム/パーク, {{example}},",
+    "FilterHelp": "検索\u3000アイテム/パーク, {{example}},",
     "FilterHelpBrief": "アイテムを検索する",
     "FilterHelpLoadouts": "ロードアウトの名前やノートを検索",
     "FilterHelpMenuItem": "フィルターヘルプ",
@@ -413,14 +413,24 @@
     "Tab": "タブ",
     "Vault": "アイテムを保管庫に送る"
   },
+  "Infusion": {
+    "Filter": "アイテムをフィルタする",
+    "InfuseSource": "{{name}} と融合するアイテムを選択してください",
+    "InfuseTarget": "{{name}} と融合するアイテムを選択してください",
+    "InfusionMaterials": "融合材料",
+    "NoItems": "融合可能なアイテムありません。",
+    "NoTransfer": "融合材料を転送\n {{target}} 移動できません.",
+    "SwitchDirection": "変更",
+    "TransferItems": "転送"
+  },
   "InGameLoadout": {
     "ClearSlot": "スロット {{index}} を削除",
     "Create": "ロードアウトを作成",
     "CreateTitle": "現在の装備からゲーム内ロードアウトを作成",
     "CurrentlyEquipped": "現在装備中",
-    "DeleteFailed": "ロードアウトを削除できませんでした",
     "Deleted": "ロードアウトを削除しました",
     "DeletedBody": "スロット {{index}} のゲーム内ロードアウトをクリアしました。",
+    "DeleteFailed": "ロードアウトを削除できませんでした",
     "EditFailed": "ロードアウトの更新に失敗",
     "EditIdentifiers": "アイコンとタイトル変更",
     "EditTitle": "ロードアウト名とアイコンを編集",
@@ -433,16 +443,6 @@
     "Save": "ロードアウトを更新",
     "SaveIdentifiers": "アイコンを更新",
     "SnapshotFailed": "装備しているロードアウトのスナップショットに失敗しました"
-  },
-  "Infusion": {
-    "Filter": "アイテムをフィルタする",
-    "InfuseSource": "{{name}} と融合するアイテムを選択してください",
-    "InfuseTarget": "{{name}} と融合するアイテムを選択してください",
-    "InfusionMaterials": "融合材料",
-    "NoItems": "融合可能なアイテムありません。",
-    "NoTransfer": "融合材料を転送\n {{target}} 移動できません.",
-    "SwitchDirection": "変更",
-    "TransferItems": "転送"
   },
   "Inventory": {
     "ClickToExpand": "(クリックして展開)"
@@ -542,10 +542,10 @@
       "LightMode": "ライトモード"
     },
     "Loading": "ベストセットをロードする",
-    "LockEquipped": "装備をロック",
-    "LockPerk": "パークを固定する",
     "Locked": "ロックされたアイテム",
     "LockedHelp": "アイテムをドラッグ＆ドロップすることでそれを固定でセット作成できます。排除するには Shift + クリック.",
+    "LockEquipped": "装備をロック",
+    "LockPerk": "パークを固定する",
     "Missing2": "フルセットを作るためのレア、レジェンダリー、エキゾチックの部位が足りません！",
     "ProcessingMode": {
       "Fast": "最速",
@@ -643,8 +643,8 @@
       "Masterworked": "各ステータス +2、エネルギー 10 を想定。",
       "None": "全アーマー: $t(LoadoutBuilder.AssumeMasterworkOptions.Current)"
     },
-    "AutoStatMods": "自動的にステータス mod を追加する",
     "AutomaticallyPicked": "この mod はビルドのステータス値を改善するため自動的に追加されました。",
+    "AutoStatMods": "自動的にステータス mod を追加する",
     "ChooseAlternateTitle": "別アイテムを選択",
     "CompareLoadout": "ロードアウトを比較",
     "ConfirmOverwrite": "ロードアウト「{{name}}」のアーマーをこの新しいアーマーセットに置き換えてもよろしいですか？",
@@ -652,9 +652,9 @@
     "DisabledByAutoStatMods": "ステータス値に関するModはロードアウト最適化機能によって自動的に選択されています。",
     "DisabledDueToMaintenance": "現在、Bungie API のメンテナンスによりロードアウト最適化が利用出来ません。",
     "EquipItems": "装備する",
+    "ExcludedItems": "省かれたアイテム",
     "ExcludeItem": "組み合わせから外すアイテムを指定",
     "ExcludeVendors": "ロードアウト最適化からベンダーアイテムを除外するには、\"-is:vendor\"で検索してください。",
-    "ExcludedItems": "省かれたアイテム",
     "ExistingLoadout": "既存のロードアウト",
     "Exotic": "エキゾチックアーマー",
     "ExoticSpecialCategory": "スペシャル",
@@ -741,19 +741,19 @@
     "CancelEditing": "編集をキャンセルする",
     "CannotCustomizeSubclass": "このサブクラスは設定することができません",
     "ChooseItem": "{{name}} を追加",
+    "Classified": "一部のアイテムは分類されており、最大出力の計算に含めることはできません。",
     "ClassType": "全クラスのロードアウト",
-    "ClassTypeMismatch": "{{className}} アイテムはこのロードアウトに追加できません",
-    "ClassTypeMissing": "ロードアウトを作成する為の {{className}} がありません",
     "ClassType_female": "{{className}} ロードアウト",
     "ClassType_male": "{{className}} ロードアウト",
-    "Classified": "一部のアイテムは分類されており、最大出力の計算に含めることはできません。",
+    "ClassTypeMismatch": "{{className}} アイテムはこのロードアウトに追加できません",
+    "ClassTypeMissing": "ロードアウトを作成する為の {{className}} がありません",
+    "ClearingSpace": "他のアイテムを移動する",
     "ClearLoadoutParameters": "ロードアウトの設定を削除",
     "ClearSection": "すべて削除",
     "ClearSpace": "他を移動する",
     "ClearSpaceArmor": "他の防具を移動する",
     "ClearSpaceWeapons": "他の武器を移動する",
     "ClearUnsetMods": "他の MOD を削除",
-    "ClearingSpace": "他のアイテムを移動する",
     "CopyAndEdit": "名前を付けて編集",
     "Create": "ロードアウトを作成",
     "CurrentlyEquipped": "現在装備中",
@@ -783,10 +783,10 @@
       "PasteHere": "ロードアウトリンクを貼り付けて、ロードアウトを開きます。"
     },
     "ImportLoadout": "ロードアウトをインポート",
-    "InGameActions": "ゲーム内ロードアウトアクション",
-    "InGameLoadouts": "ゲーム内ロードアウト",
     "IncludeRuntimeStatBenefits": "Mod「～の泉」の反映後の数値としてカウントする",
     "IncludeRuntimeStatBenefitsDesc": "アーマーMod「～の泉」は、アーマーチャージの間はキャラクターのステータスを一律に上昇させます。\nこの設定を有効にすると、DIMはこれらのModがアクティブの状態での数値を、ロードアウト最適化のステータス値として計算し反映させます。",
+    "InGameActions": "ゲーム内ロードアウトアクション",
+    "InGameLoadouts": "ゲーム内ロードアウト",
     "ItemErrorSummary_other": "{{count}} 個のアイテムでエラー：",
     "ItemLeveling": "アイテムのレベルアップ",
     "LoadoutName": "ロードアウトの名前...",
@@ -796,15 +796,15 @@
     "LoadoutParametersStats": "ステータス値の優先順位と最小/最大ステータス値範囲",
     "Loadouts": "ロードアウト",
     "MakeRoom": "ポストマスターのための部屋を作る",
+    "MakeRoomDone_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
     "MakeRoomDone_female_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
     "MakeRoomDone_male_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
-    "MakeRoomDone_other": "{{store}} から{{movedNum}} 個のアイテムを移動して、{{count}} 個のポストマスターアイテム用のスペースを作成しました。",
     "MakeRoomError": "ポストマスターの全アイテム用のスペースを確保できませんでした: {{error}} 。",
     "ManageLoadouts": "ロードアウトの管理",
-    "MaxSlots": "ロードアウトには {{slots}} {{bucketName}} しかありません。",
     "MaximizeLight": "最大 Light",
     "MaximizePower": "最大パワー",
     "MaximizeStat": "統計を最大化する",
+    "MaxSlots": "ロードアウトには {{slots}} {{bucketName}} しかありません。",
     "MissingItemsWarning": "このロードアウトに含まれる装備の一部は所持品にありません。",
     "ModErrorSummary_other": "{{count}} 個のmod エラー：",
     "ModPlacement": {
@@ -821,14 +821,14 @@
     "Mods": "Mod",
     "ModsOnly": "Modのみ",
     "MoveItems": "アイテムを移動しています",
-    "NoSpace": "保管庫や他のキャラクターの空きスペースがありません。",
     "NoneMatch": "フィルタに一致するロードアウトはありませんでした。",
-    "NotStarted": "他のアクションの完了、もしくは保管庫の更新による読み込みの終了を待っています。",
+    "NoSpace": "保管庫や他のキャラクターの空きスペースがありません。",
     "NotesPlaceholder": "このロードアウトに関するメモを書くか、 オリジナルの #hashtag を書くと分類しやすくなります",
     "NotificationTitle": "ロードアウト: {{name}}",
+    "NotStarted": "他のアクションの完了、もしくは保管庫の更新による読み込みの終了を待っています。",
+    "OnlyItems": "装備可能なアイテム、マテリアル、消耗品のみをロードアウトに追加することができます。",
     "OnWrongCharacterAdvice": "このキャラクターの最高パワーのアイテムはこちら。",
     "OnWrongCharacterWarning": "このキャラクターの最も強力なアーマーは、別のキャラクターが所持しています。 パワーのドロップ、強力、最高峰の報酬にカウントするには、アーマーはこのキャラクターか保管庫に存在しなければなりません。",
-    "OnlyItems": "装備可能なアイテム、マテリアル、消耗品のみをロードアウトに追加することができます。",
     "OpenInOptimizer": "防具の最適化",
     "OpenOnStreamDeck": "Stream Deckで開く",
     "PickArmor": "アーマーを選択",
@@ -842,9 +842,9 @@
     "PullFromPostmaster": "ポストマスターからアイテムを取得する",
     "PullFromPostmasterError": "ポストマスターから転送できません：{{error}}",
     "PullFromPostmasterGeneralError": "ポストマスターからすべてのアイテムを取得できません。",
+    "PullFromPostmasterNotification_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
     "PullFromPostmasterNotification_female_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
     "PullFromPostmasterNotification_male_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
-    "PullFromPostmasterNotification_other": "{{count}} ポストマスターアイテムを{{store}} に引き出します。",
     "PullFromPostmasterPopupTitle": "ポストマスターから取得",
     "Random": "ランダム",
     "Randomize": "ロードアウトのランダム化",
@@ -909,8 +909,8 @@
     "PinnacleCap": "最高峰の報酬キャップ",
     "PowerFloor": "パワー最低値",
     "PowerfulCap": "強力な報酬キャップ",
-    "SeasonEnds": "シーズン終了まで ",
     "SeasonalRank": "シーズンランク {{rank}}",
+    "SeasonEnds": "シーズン終了まで ",
     "SoftCap": "ソフトキャップ",
     "Special": "スペシャルイベントチャレンジ",
     "Tutorial": "チュートリアルチャレンジ",
@@ -988,6 +988,7 @@
     "Vault": "保管庫",
     "WeaponLevel": "武器レベル {{level}}"
   },
+  "no-space": "空きスペースなし",
   "Notes": {
     "Error": "エラー！ノートは120文字が上限です。",
     "Help": "メモ、#hashtag、 :symbols: を追加"
@@ -1027,8 +1028,8 @@
       "Locked": "ロック中",
       "MasterworkStat": "MWの種類",
       "MasterworkTier": "MWレベル",
-      "ModSlot": "Modスロット",
       "Mods": "Mod",
+      "ModSlot": "Modスロット",
       "Name": "名前",
       "New": "New",
       "Notes": "メモ",
@@ -1069,9 +1070,9 @@
       "Airborne": "空中性能",
       "AmmoGeneration": "弾薬生成",
       "Power": "パワー",
-      "RPM": "毎分発射数",
       "Recoil": "リコイル",
-      "Reload": "リロード"
+      "Reload": "リロード",
+      "RPM": "毎分発射数"
     },
     "Unlock": "ロックを解除する"
   },
@@ -1176,8 +1177,8 @@
     "ResetToDefault": "リセット",
     "ReverseSort": "前方 / 逆ソートの切り替え",
     "SetSort": "アイテムを並べ替える：",
-    "SetVaultWeaponGrouping": "保管庫の武器を次のルールでグループ化する:",
     "Settings": "設定",
+    "SetVaultWeaponGrouping": "保管庫の武器を次のルールでグループ化する:",
     "ShowNewItems": "新しいアイテムに赤い点を表示する",
     "SingleCharacter": "プレイ中のキャラクターだけを表示する",
     "SingleCharacterExplanation": "所持品のページで最後にプレイしたキャラクターだけを表示するよう設定します。\n非プレイのキャラクターが持っているアイテムで現在のキャラも使用できる場合、保管庫に表示されます。 \nクラス固有のアイテムは表示されません。",
@@ -1258,8 +1259,8 @@
     "NoBonus": "ボーナスなし。",
     "NotApplicable": "N/A",
     "OfMaxRoll": "統計量の {{range}}",
-    "PercentHelp": "品質の詳細については、ここをクリックしてください。",
     "Percentage": "%",
+    "PercentHelp": "品質の詳細については、ここをクリックしてください。",
     "PowerModifier": "パワーボーナスと経験値",
     "Prestige": "評判レベル： {{level}}\n光の欠片5個までは後 {{exp}}xp",
     "Quality": "品質",
@@ -1484,6 +1485,5 @@
     "WishListNotes": "ウィッシュリストのメモ:",
     "WorstRatedTip_other": "ごみリストにある非推奨パークと完全一致しています。"
   },
-  "no-space": "空きスペースなし",
   "wrong-level": "レベル不正"
 }
