--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -1,17 +1,9 @@
 {
-  "AWA": {
-    "ConfirmDescription": "데스티니 가디언즈 컴패니언 앱을 실행하여 DIM이 아이템을 수정할 수 있도록 허용해주세요.",
-    "ConfirmTitle": "작업 확인",
-    "Error": "개조 부품이나 특성 교체 실패",
-    "ErrorMessage": "{{item}}에 {{plug}}을(를) 장착할 수 없습니다.\n\n{{error}}",
-    "FailedToken": "아이템을 변경할 권한이 없음",
-    "IrreversiblePlugging": "{{plug}}을(를) 소지하고 있지 않으므로 덮어쓰지 않습니다."
-  },
   "Accounts": {
     "Choose": "{{bungieName}} 프로필",
+    "ErrorLoading": "Bungie.net에서 데스티니 계정 불러오기 실패",
     "ErrorLoadInventory": "데스티니 {{version}} 캐릭터와 소지품 불러오기 실패",
     "ErrorLoadManifest": "Bungie에서 데스티니 정보 데이터베이스 불러오기 실패",
-    "ErrorLoading": "Bungie.net에서 데스티니 계정 불러오기 실패",
     "MissingAccountWarning": "여기에 계정이 보이지 않는다면 잘못된 Bungie.net 계정으로 로그인하였거나 Bungie.net이 점검 중일 수 있습니다.",
     "MissingDescription": "지금 확인하려는 계정은 Bungie.net 프로필과 연결된 계정이 아닙니다. 아래에서 본인의 계정을 선택하세요.",
     "MissingTitle": "계정을 찾을 수 없습니다",
@@ -38,6 +30,14 @@
     "Unknown": "알 수 없는 아이템",
     "WishlistedRolls_other": "{{count, number}}개의 희망 아이템 목록에 추가된 특성 조합",
     "YourItems": "내 아이템"
+  },
+  "AWA": {
+    "ConfirmDescription": "데스티니 가디언즈 컴패니언 앱을 실행하여 DIM이 아이템을 수정할 수 있도록 허용해주세요.",
+    "ConfirmTitle": "작업 확인",
+    "Error": "개조 부품이나 특성 교체 실패",
+    "ErrorMessage": "{{item}}에 {{plug}}을(를) 장착할 수 없습니다.\n\n{{error}}",
+    "FailedToken": "아이템을 변경할 권한이 없음",
+    "IrreversiblePlugging": "{{plug}}을(를) 소지하고 있지 않으므로 덮어쓰지 않습니다."
   },
   "Browsercheck": {
     "Samsung": "삼성 인터넷은 다크 모드가 활성화된 경우 사이트를 너무 어둡게 만들 수 있습니다. 설정 > 실험실 > 웹사이트의 다크 테마를 사용하거나 다른 브라우저를 사용하세요.",
@@ -112,8 +112,8 @@
     "Super": "궁극기 재사용 대기시간: {{cooldown}}"
   },
   "Countdown": {
-    "Days_compact_other": "{{count}}일",
-    "Days_other": "{{count}}일"
+    "Days_other": "{{count}}일",
+    "Days_compact_other": "{{count}}일"
   },
   "Csv": {
     "EmptyFile": "파일에 행이 없습니다.",
@@ -145,12 +145,12 @@
     "Troubleshooting": "문제 해결 가이드"
   },
   "FarmingMode": {
+    "D2Desc_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
     "D2Desc_female_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
     "D2Desc_male_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
-    "D2Desc_other": "DIM은 {{store}}의 아이템 종류별로 {{count}}개의 빈 공간을 만듦으로써 아이템이 우편 담당자에게 보내지는 것을 막고 있습니다.",
+    "Desc_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
     "Desc_female_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
     "Desc_male_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
-    "Desc_other": "DIM이 우편 담당자에게 아이템이 보내지는 것을 막기 위해 {{store}}의 엔그램과 미광체 아이템을 금고로 옮기고 아이템 종류별로 {{count}}개의 빈 공간을 확보하고 있습니다.",
     "FarmingMode": "파밍 모드",
     "FarmingModeNote": "(획득할 아이템을 위해 공간 관리)",
     "MakeRoom": {
@@ -238,11 +238,11 @@
     "HasOrnament": "장식이 적용된 아이템을 표시합니다.",
     "HasShader": "안료가 적용된 아이템을 표시합니다.",
     "InDimLoadout": "is:indimloadout은 DIM 로드아웃에 포함된 아이템을 표시합니다.",
+    "Infusable": "주입할 수 있는 아이템을 표시합니다.",
+    "InfusionFodder": "더 낮은 전투력의 동일한 아이템에 미광체만을 사용하여 주입할 수 있는 아이템을 표시합니다.",
     "InInGameLoadout": "is:iningameloadout은 게임 내 로드아웃에 포함된 아이템을 표시합니다.",
     "InInventory": "소지품에 한 개 이상 보유 중인 아이템을 표시합니다. 상점이나 기록 화면에서만 유용합니다.",
     "InLoadout": "\"is:inloadout\"은 로드아웃에 포함된 아이템을 표시합니다. \"inloadout:\"을 사용하여 검색하면 이름이 일치하는 로드아웃의 아이템을 표시합니다. \"inloadout:\"이 해시태그와 같이 사용되는 경우, 이름이나 메모에 해시태그가 포함된 로드아웃의 아이템을 표시합니다. 숫자 범위와 함께 사용되는 경우, 해당 개수만큼 로드아웃에 포함된 아이템을 표시합니다.",
-    "Infusable": "주입할 수 있는 아이템을 표시합니다.",
-    "InfusionFodder": "더 낮은 전투력의 동일한 아이템에 미광체만을 사용하여 주입할 수 있는 아이템을 표시합니다.",
     "IsAdept": "숙련자 개조 부품과 호환되는 무기를 표시합니다.",
     "IsCrafted": "제작된 무기를 표시합니다.",
     "ItemHash": "소지품 아이템의 해시와 일치하는 아이템을 표시합니다. 고급 사용자용.",
@@ -263,10 +263,10 @@
     "MaxPower": "각 슬롯에서 가장 높은 전투력의 아이템을 표시합니다.",
     "MaxPowerLoadout": "로드아웃에서 각 직업의 전투력을 최대화할 수 있는 아이템을 표시합니다.",
     "Memento": "유품 소켓이 있는 무기를 표시합니다.",
-    "ModSlot": "특정 개조 부품 슬롯이 있는 방어구를 표시합니다.",
     "Mods": {
       "Y3": "방어구 2.0 개조 부품이 선택된 아이템을 표시합니다."
     },
+    "ModSlot": "특정 개조 부품 슬롯이 있는 방어구를 표시합니다.",
     "Name": "필터와 일치(exactname:)하거나 부분적으로 일치(name:)하는 아이템을 표시합니다. 따옴표를 사용하여 전체 문구를 검색합니다.",
     "NamedStat": "특정 능력치가 있는 아이템을 표시합니다.",
     "Negate": "검색 결과를 제외하려면 {{notexample}}나 {{notexample2}}와 같이 검색어 앞에 마이너스 기호나 \"not\"을 붙이세요.",
@@ -280,9 +280,9 @@
     "PerkName": "특성이나 개조 부품의 이름이 필터와 일치(exactperk:)하거나 부분적으로 일치(perkname:)하는 아이템을 표시합니다. 따옴표를 사용하여 전체 문구를 검색합니다.",
     "PinnacleReward": "최고급 보상을 주는 이정표를 표시합니다.",
     "Postmaster": "우편 담당자가 소지하고 있는 아이템",
+    "PowerfulReward": "강력한 보상을 주는 이정표를 표시합니다.",
     "PowerKeywords": "현재 시즌의 전투력 제한 값 대신 pinnaclecap이나 softcap 단어를 사용합니다.",
     "PowerLevel": "전투력을 기준으로 아이템을 표시합니다. $t(Filter.PowerKeywords)",
-    "PowerfulReward": "강력한 보상을 주는 이정표를 표시합니다.",
     "PrismaticDamageType": "빛, 어둠 피해 유형에 따라 아이템을 표시합니다. 빛 유형은 전기, 태양, 공허입니다. 어둠 유형은 시공, 초월입니다.",
     "Quality": "전체 능력치의 품질 비율에 따라 아이템을 표시합니다. '{{percentage}}'는 '{{quality}}'의 단축어입니다.",
     "RandomRoll": "무작위 특성의 아이템을 표시합니다.",
@@ -294,9 +294,9 @@
     "SearchPrompt": "사용 가능한 필터 명령어 검색",
     "Season": "데스티니 2의 특정 시즌에서 나온 아이템을 표시합니다.",
     "Shiny": "한정 장식이 적용된 용맹 무기를 표시합니다.",
+    "Stackable": "한 칸에 중첩 가능한 아이템(탄약 신스, 이상한 동전 등)을 표시합니다.",
     "StackFull": "스택 당 최대 소지 제한에 도달한 아이템 표시 (강화 코어, 이상한 동전, 총기 제작 재료 등)",
     "StackLevel": "아이템의 개수를 기준으로 표시합니다.",
-    "Stackable": "한 칸에 중첩 가능한 아이템(탄약 신스, 이상한 동전 등)을 표시합니다.",
     "StatLower": "동일한 종류의 다른 방어구보다 능력치가 확실하게 낮은 방어구를 표시합니다.",
     "Stats": "특정 능력치의 값에 따라 아이템을 표시합니다. $t(Filter.StatsExtras)",
     "StatsBase": "방어구를 장착된 개조 부품과 걸작을 제외한 기본 능력치 값으로 필터링. $t(Filter.StatsExtras)",
@@ -413,14 +413,24 @@
     "Tab": "탭",
     "Vault": "아이템을 창고로 이동"
   },
+  "Infusion": {
+    "Filter": "아이템 필터",
+    "InfuseSource": "{{name}}을(를) 주입할 아이템 선택",
+    "InfuseTarget": "{{name}}에 주입할 아이템 선택",
+    "InfusionMaterials": "주입 재료",
+    "NoItems": "주입할 수 있는 아이템이 없음.",
+    "NoTransfer": "주입 재료 이동\n{{target}}을(를) 옮길 수 없습니다.",
+    "SwitchDirection": "전환",
+    "TransferItems": "이동"
+  },
   "InGameLoadout": {
     "ClearSlot": "슬롯 {{index}} 초기화",
     "Create": "로드아웃 생성",
     "CreateTitle": "현재 장비에서 게임 내 로드아웃 생성",
     "CurrentlyEquipped": "현재 착용 중인 아이템",
-    "DeleteFailed": "로드아웃 삭제 실패",
     "Deleted": "로드아웃 삭제됨",
     "DeletedBody": "게임 내 로드아웃 {{index}}번 슬롯 삭제됨",
+    "DeleteFailed": "로드아웃 삭제 실패",
     "EditFailed": "로드아웃 업데이트 실패",
     "EditIdentifiers": "식별자 변경",
     "EditTitle": "로드아웃 이름 및 아이콘 변경",
@@ -433,16 +443,6 @@
     "Save": "로드아웃 업데이트",
     "SaveIdentifiers": "식별자 업데이트",
     "SnapshotFailed": "장착된 로드아웃 스냅샷 생성 실패"
-  },
-  "Infusion": {
-    "Filter": "아이템 필터",
-    "InfuseSource": "{{name}}을(를) 주입할 아이템 선택",
-    "InfuseTarget": "{{name}}에 주입할 아이템 선택",
-    "InfusionMaterials": "주입 재료",
-    "NoItems": "주입할 수 있는 아이템이 없음.",
-    "NoTransfer": "주입 재료 이동\n{{target}}을(를) 옮길 수 없습니다.",
-    "SwitchDirection": "전환",
-    "TransferItems": "이동"
   },
   "Inventory": {
     "ClickToExpand": "(클릭하여 확장)"
@@ -542,10 +542,10 @@
       "LightMode": "전투력 모드"
     },
     "Loading": "가장 좋은 장비 조합 불러오는 중",
-    "LockEquipped": "장착된 아이템 잠금",
-    "LockPerk": "특성 잠금",
     "Locked": "잠긴 아이템",
     "LockedHelp": "바구니에 아이템을 끌어다 놓아 해당 장비가 포함된 조합을 만드세요. 아이템을 제외하려면 쉬프트 + 클릭하세요.",
+    "LockEquipped": "장착된 아이템 잠금",
+    "LockPerk": "특성 잠금",
     "Missing2": "완전한 세트를 만들기 위해 필요한 희귀, 전설, 경이 등급의 장비가 부족합니다!",
     "ProcessingMode": {
       "Fast": "빠름",
@@ -643,8 +643,8 @@
       "Masterworked": "각 능력치 +2, 에너지 레벨 10 가정",
       "None": "모든 방어구: $t(LoadoutBuilder.AssumeMasterworkOptions.Current)"
     },
-    "AutoStatMods": "능력치 개조 부품 자동 추가",
     "AutomaticallyPicked": "이 개조 부품은 빌드의 능력치를 향상시키기 위해 자동으로 추가되었습니다.",
+    "AutoStatMods": "능력치 개조 부품 자동 추가",
     "ChooseAlternateTitle": "다른 아이템 선택",
     "CompareLoadout": "로드아웃 비교",
     "ConfirmOverwrite": "로드아웃 \"{{name}}\"의 방어구를 새로운 방어구 조합으로 변경하시겠습니까?",
@@ -652,9 +652,9 @@
     "DisabledByAutoStatMods": "능력치 개조 부품은 로드아웃 최적화에서 자동으로 선택됩니다.",
     "DisabledDueToMaintenance": "Bungie API 점검으로 인하여 로드아웃 최적화가 비활성화되었습니다.",
     "EquipItems": "장착",
+    "ExcludedItems": "제외된 아이템",
     "ExcludeItem": "아이템 제외",
     "ExcludeVendors": "\"-is:vendor\"를 검색하여 로드아웃 최적화에서 상인 아이템을 제외합니다.",
-    "ExcludedItems": "제외된 아이템",
     "ExistingLoadout": "기존 로드아웃",
     "Exotic": "경이 방어구",
     "ExoticSpecialCategory": "특수",
@@ -741,19 +741,19 @@
     "CancelEditing": "변경 취소",
     "CannotCustomizeSubclass": "이 하위직업의 설정을 변경할 수 없음",
     "ChooseItem": "{{name}} 추가",
+    "Classified": "일부 아이템이 비공개 상태이며 최대 전투력 계산에 포함되지 않았습니다.",
     "ClassType": "아무 직업 로드아웃",
-    "ClassTypeMismatch": "{{className}} 아이템을 이 로드아웃에 추가할 수 없습니다.",
-    "ClassTypeMissing": "로드아웃을 생성할 {{className}}이(가) 없습니다",
     "ClassType_female": "{{className}} 로드아웃",
     "ClassType_male": "{{className}} 로드아웃",
-    "Classified": "일부 아이템이 비공개 상태이며 최대 전투력 계산에 포함되지 않았습니다.",
+    "ClassTypeMismatch": "{{className}} 아이템을 이 로드아웃에 추가할 수 없습니다.",
+    "ClassTypeMissing": "로드아웃을 생성할 {{className}}이(가) 없습니다",
+    "ClearingSpace": "다른 아이템 이동 중",
     "ClearLoadoutParameters": "로드아웃 최적화 설정 제거",
     "ClearSection": "모두 제거",
     "ClearSpace": "다른 아이템 이동",
     "ClearSpaceArmor": "다른 방어구 이동",
     "ClearSpaceWeapons": "다른 무기 이동",
     "ClearUnsetMods": "다른 개조 부품 제거",
-    "ClearingSpace": "다른 아이템 이동 중",
     "CopyAndEdit": "사본 편집",
     "Create": "로드아웃 생성",
     "CurrentlyEquipped": "현재 착용 중인 아이템",
@@ -783,10 +783,10 @@
       "PasteHere": "로드아웃을 열려면 로드아웃 주소를 붙여넣으세요."
     },
     "ImportLoadout": "로드아웃 가져오기",
-    "InGameActions": "게임 내 로드아웃 액션",
-    "InGameLoadouts": "게임 내 로드아웃",
     "IncludeRuntimeStatBenefits": "샘 개조 부품 능력치 포함",
     "IncludeRuntimeStatBenefitsDesc": "\"... 샘\" 방어구 개조 부품은 방어구 충전이 있는 동안 캐릭터 능력치를 일정하게 향상시킵니다.\n\n이 설정이 켜진 경우, DIM은 이 개조 부품이 활성화된 것으로 간주하고 로드아웃의 능력치 계산과 최적화에 사용합니다.",
+    "InGameActions": "게임 내 로드아웃 액션",
+    "InGameLoadouts": "게임 내 로드아웃",
     "ItemErrorSummary_other": "{{count}}개의 아이템 오류:",
     "ItemLeveling": "아이템 레벨 올리기",
     "LoadoutName": "로드아웃 이름",
@@ -796,15 +796,15 @@
     "LoadoutParametersStats": "능력치 선호도와 최소/최대 능력치 범위",
     "Loadouts": "로드아웃",
     "MakeRoom": "우편 담당자를 위한 공간 생성",
+    "MakeRoomDone_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
     "MakeRoomDone_female_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
     "MakeRoomDone_male_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
-    "MakeRoomDone_other": "{{store}}에서 {{movedNum}}개의 아이템을 옮겨서 우편 담당자 아이템 {{count}}개를 위한 공간을 만들었습니다.",
     "MakeRoomError": "모든 우편 담당자 아이템을 위한 공간을 만들 수 없습니다: {{error}}",
     "ManageLoadouts": "로드아웃 관리",
-    "MaxSlots": "로드아웃에는 최대 {{slots}}개의 {{bucketName}}을(를) 포함할 수 있습니다.",
     "MaximizeLight": "최대 전투력",
     "MaximizePower": "최대 전투력",
     "MaximizeStat": "능력치 최대화",
+    "MaxSlots": "로드아웃에는 최대 {{slots}}개의 {{bucketName}}을(를) 포함할 수 있습니다.",
     "MissingItemsWarning": "이 로드아웃의 일부 아이템이 더 이상 소지품에 없습니다.",
     "ModErrorSummary_other": "{{count}}개의 개조 부품 오류:",
     "ModPlacement": {
@@ -821,14 +821,14 @@
     "Mods": "개조 부품",
     "ModsOnly": "개조 부품만",
     "MoveItems": "아이템 이동 중",
-    "NoSpace": "금고와 다른 캐릭터의 빈 공간이 없습니다.",
     "NoneMatch": "필터와 일치하는 로드아웃이 없습니다.",
-    "NotStarted": "다른 작업이 완료되거나 소지품을 새로고침하여 불러오기를 기다리는 중",
+    "NoSpace": "금고와 다른 캐릭터의 빈 공간이 없습니다.",
     "NotesPlaceholder": "이 로드아웃에 메모를 작성하거나 #해시태그를 사용하여 그룹화합니다.",
     "NotificationTitle": "로드아웃: {{name}}",
+    "NotStarted": "다른 작업이 완료되거나 소지품을 새로고침하여 불러오기를 기다리는 중",
+    "OnlyItems": "오직 장착이 가능한 아이템, 재료, 소모품들만이 로드아웃에 추가될 수 있습니다.",
     "OnWrongCharacterAdvice": "이 캐릭터에서 전투력이 가장 높은 아이템을 찾으려면 여기를 클릭하세요.",
     "OnWrongCharacterWarning": "이 캐릭터에서 전투력이 가장 높은 방어구가 다른 캐릭터에 있습니다. 떨어지는 아이템, 강력한 보상, 최고급 보상의 전투력 계산에 포함되려면 방어구가 이 캐릭터나 창고에 있어야 합니다.",
-    "OnlyItems": "오직 장착이 가능한 아이템, 재료, 소모품들만이 로드아웃에 추가될 수 있습니다.",
     "OpenInOptimizer": "방어구 최적화",
     "OpenOnStreamDeck": "스트림덱에서 열기",
     "PickArmor": "방어구 선택",
@@ -842,9 +842,9 @@
     "PullFromPostmaster": "우편 담당자에게서 수령",
     "PullFromPostmasterError": "우편 담당자로부터 가져올 수 없습니다: {{error}}",
     "PullFromPostmasterGeneralError": "우편 담당자에게서 모든 아이템을 가져올 수 없습니다.",
+    "PullFromPostmasterNotification_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
     "PullFromPostmasterNotification_female_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
     "PullFromPostmasterNotification_male_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
-    "PullFromPostmasterNotification_other": "{{count}}개의 아이템을 우편 담당자에게서 {{store}}에게 이동하였습니다.",
     "PullFromPostmasterPopupTitle": "우편 담당자에게서 가져오기",
     "Random": "무작위",
     "Randomize": "무작위 로드아웃",
@@ -909,8 +909,8 @@
     "PinnacleCap": "최고급 장비 전투력 제한",
     "PowerFloor": "전투력 하한",
     "PowerfulCap": "강력한 장비 전투력 제한",
-    "SeasonEnds": "시즌 종료: ",
     "SeasonalRank": "시즌 등급 {{rank}}",
+    "SeasonEnds": "시즌 종료: ",
     "SoftCap": "일반 장비 전투력 제한",
     "Special": "특별 이벤트 도전",
     "Tutorial": "튜토리얼 도전",
@@ -988,6 +988,7 @@
     "Vault": "금고",
     "WeaponLevel": "무기 레벨 {{level}}"
   },
+  "no-space": "no-space",
   "Notes": {
     "Error": "에러! 메모는 최대 120자 까지 쓰실 수 있습니다.",
     "Help": "메모, #해시태그, :기호: 추가"
@@ -1027,8 +1028,8 @@
       "Locked": "잠금",
       "MasterworkStat": "걸작 능력치",
       "MasterworkTier": "걸작 등급",
-      "ModSlot": "개조 부품 소켓",
       "Mods": "개조 부품",
+      "ModSlot": "개조 부품 소켓",
       "Name": "이름",
       "New": "신규",
       "Notes": "메모",
@@ -1069,9 +1070,9 @@
       "Airborne": "공중 효율",
       "AmmoGeneration": "탄약 생성",
       "Power": "전투력",
-      "RPM": "RPM",
       "Recoil": "반동",
-      "Reload": "재장전"
+      "Reload": "재장전",
+      "RPM": "RPM"
     },
     "Unlock": "잠금 해제"
   },
@@ -1176,8 +1177,8 @@
     "ResetToDefault": "초기화",
     "ReverseSort": "오름차순/내림차순 정렬 전환",
     "SetSort": "아이템 정렬 방법:",
-    "SetVaultWeaponGrouping": "창고 무기 정렬 방법:",
     "Settings": "설정",
+    "SetVaultWeaponGrouping": "창고 무기 정렬 방법:",
     "ShowNewItems": "새 아이템에 빨간색 점 표시",
     "SingleCharacter": "단일 캐릭터 보기",
     "SingleCharacterExplanation": "DIM에서 가장 최근에 플레이한 캐릭터만 표시합니다.\n숨겨진 캐릭터가 소지한 아이템은 현재 캐릭터가 사용할 수 있는 경우 금고에 표시됩니다.\n다른 직업의 아이템은 완전히 숨겨집니다.",
@@ -1258,8 +1259,8 @@
     "NoBonus": "보너스 없음",
     "NotApplicable": "해당 없음",
     "OfMaxRoll": "최대로 나올 수 있는 {{range}}",
-    "PercentHelp": "클릭하셔서 품질에 대한 자세한 내용을 확인하세요.",
     "Percentage": "%",
+    "PercentHelp": "클릭하셔서 품질에 대한 자세한 내용을 확인하세요.",
     "PowerModifier": "시즌 경험치 획득으로 주어진 전투력",
     "Prestige": "명성 레벨: {{level}}\n5개의 빛의 티끌까지 {{exp}}xp",
     "Quality": "능력치 품질",
@@ -1484,6 +1485,5 @@
     "WishListNotes": "희망 아이템 목록 메모:",
     "WorstRatedTip_other": "쓰레기 아이템 목록에 있는 무기의 특성 조합과 일치합니다."
   },
-  "no-space": "no-space",
   "wrong-level": "wrong-level"
 }
