--- a/src/locale/zhCHT.json
+++ b/src/locale/zhCHT.json
@@ -1,17 +1,9 @@
 {
-  "AWA": {
-    "ConfirmDescription": "請使用\"命運2同伴應用\"授予DIM修改您物品的許可權。",
-    "ConfirmTitle": "確認操作",
-    "Error": "更改模組或特性時出錯",
-    "ErrorMessage": "我們無法將{{plug}} 裝備到{{item}}。\n\n\n{{error}}",
-    "FailedToken": "無權限更換物品",
-    "IrreversiblePlugging": "不擁有{{plug}}，所以我們不會覆蓋它。"
-  },
   "Accounts": {
     "Choose": "{{bungieName}} 的檔案",
+    "ErrorLoading": "無法從 Bungie.net 加載命運賬戶",
     "ErrorLoadInventory": "無法加載你的《命運 {{version}}》角色和庫存",
     "ErrorLoadManifest": "無法從 Bungie 加載命運信息數據庫",
-    "ErrorLoading": "無法從 Bungie.net 加載命運賬戶",
     "MissingAccountWarning": "如果你的賬戶沒有在此處顯示，你可能登入了錯誤的 Bungie.net 賬戶，或 Bungie.net 可能正在停機維修。",
     "MissingDescription": "你試圖查看的賬戶並未連接到你的 Bungie.net 賬戶。請在下方選取你的賬戶。",
     "MissingTitle": "找不到帳戶",
@@ -34,10 +26,20 @@
     "NoNotes": "無注釋",
     "OpenInArmory": "查看武器詳情",
     "Season": "年 {{year}}，第 {{season}} 賽季",
+    "TrashlistedRolls_one": "",
     "TrashlistedRolls_other": "{{count, number}} 個垃圾列表特性組合",
     "Unknown": "未知物品",
+    "WishlistedRolls_one": "",
     "WishlistedRolls_other": "{{count, number}} 個願望清單特性組合",
     "YourItems": "你的物品"
+  },
+  "AWA": {
+    "ConfirmDescription": "請使用\"命運2同伴應用\"授予DIM修改您物品的許可權。",
+    "ConfirmTitle": "確認操作",
+    "Error": "更改模組或特性時出錯",
+    "ErrorMessage": "我們無法將{{plug}} 裝備到{{item}}。\n\n\n{{error}}",
+    "FailedToken": "無權限更換物品",
+    "IrreversiblePlugging": "不擁有{{plug}}，所以我們不會覆蓋它。"
   },
   "Browsercheck": {
     "Samsung": "Samsung Internet can make sites look too dark when dark mode is on. Enable Settings > Labs > Use website dark theme or switch to another browser.",
@@ -62,6 +64,7 @@
     "Confirm": "更新説明",
     "Remove": "從備注中移除 / 移除 #標簽",
     "Replace": "替換備注",
+    "Title_one": "",
     "Title_other": "更改 {{count}} 個物品的備注"
   },
   "BungieAlert": {
@@ -112,13 +115,15 @@
     "Super": "超能冷卻：{{cooldown}}"
   },
   "Countdown": {
-    "Days_compact_other": "{{count}}天",
-    "Days_other": "{{count}} 天"
+    "Days_one": "",
+    "Days_other": "{{count}} 天",
+    "Days_compact_other": "{{count}}天"
   },
   "Csv": {
     "EmptyFile": "檔案中沒有行",
     "ImportConfirm": "您確定要從CSV導入標籤/筆記？這將覆蓋您試算表中所包含的所有項目/標記。",
     "ImportFailed": "從CSV導入標籤/注釋失敗：{{error}}",
+    "ImportSuccess_one": "",
     "ImportSuccess_other": "為{{count}} 個物品加載的標籤/注釋。",
     "ImportWrongFileType": "此檔案不是一個CSV檔案。",
     "WrongFields": "CSV檔案中必須有'Id'，'Notes'，'Tag'，'Hash'列（編號，注釋，標籤，雜湊）"
@@ -145,12 +150,14 @@
     "Troubleshooting": "故障排除指南"
   },
   "FarmingMode": {
+    "D2Desc_one": "",
+    "D2Desc_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
     "D2Desc_female_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
     "D2Desc_male_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
-    "D2Desc_other": "為防止有物品被寄送到郵政官處，DIM 正確保 {{store}} 上的每個物品種類都留有 {{count}} 個空位。",
+    "Desc_one": "",
+    "Desc_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
     "Desc_female_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
     "Desc_male_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
-    "Desc_other": "為防止有物品被寄送到郵政官處，DIM 正將 {{store}} 上的記憶水晶和微光物品移動到保險庫，並確保每個物品種類都留有 {{count}} 個空位。",
     "FarmingMode": "收集模式",
     "FarmingModeNote": "(為掉落物留出空間)",
     "MakeRoom": {
@@ -194,8 +201,11 @@
     "ArmorIntrinsic": "顯示帶有固有特性的傳説防具，例如詭計護甲。",
     "Ascended": "顯示可提升光等且已提升的物品。",
     "Breaker": "Filter by breaker type or corresponding champion type. breaker:instrinsic shows items with intrinsic breaker ability.",
+    "BulkClear_one": "",
     "BulkClear_other": "移除 {{count}} 物品標籤",
+    "BulkRevert_one": "",
     "BulkRevert_other": "恢復 {{count}} 件物品標籤",
+    "BulkTag_one": "",
     "BulkTag_other": "將 {{count}} 件選擇物品標記為 {{tag}}.",
     "Catalyst": "按狀態顯示催化。catalyst:complete 顯示已解鎖并已套用的催化， catalyst:incomplete 顯示已解鎖但尚未完成目標或套用的催化，而 catalyst:missing 顯示你尚未解鎖催化的物品。",
     "Class": "按照職業類別顯示.",
@@ -238,11 +248,11 @@
     "HasOrnament": "顯示已應用皮膚的物品",
     "HasShader": "顯示已應用著色器的物品",
     "InDimLoadout": "is:indimloadout shows items that are included in any DIM loadout.",
+    "Infusable": "顯示可以灌注的物品.",
+    "InfusionFodder": "顯示可用於灌注同類物品且只消耗微光的物品。",
     "InInGameLoadout": "is:iningameloadout 顯示任何游戲内配裝包含的物品。",
     "InInventory": "Shows items that you have at least one copy of in your inventory. Only really useful in the Vendors and Records screens.",
     "InLoadout": "is:inloadout shows items that are included in any loadout. Searching with inloadout: shows items that are included in loadouts with matching titles. When used with a hashtag, inloadout: shows items whose loadouts have the hashtag in the title or notes. When used with a range, it shows items that are in that many loadouts.",
-    "Infusable": "顯示可以灌注的物品.",
-    "InfusionFodder": "顯示可用於灌注同類物品且只消耗微光的物品。",
     "IsAdept": "顯示可安裝專家模組的武器。",
     "IsCrafted": "顯示製作獲取的武器。",
     "ItemHash": "顯示具有給定物品 hash 的物品。此為高級用戶選項。",
@@ -263,10 +273,10 @@
     "MaxPower": "顯示每個槽位最高光等的物品。",
     "MaxPowerLoadout": "顯示每個職業中能最大化光等的配裝物品。",
     "Memento": "Shows weapons that have a memento socket.",
-    "ModSlot": "Shows armor with a specific mod type slot.",
     "Mods": {
       "Y3": "顯示啟用防具2.0模組的物品"
     },
+    "ModSlot": "Shows armor with a specific mod type slot.",
     "Name": "Shows items whose name matches (exactname:) or partially matches (name:) the filter text. Search for entire phrases using quotes.",
     "NamedStat": "顯示重要防具.",
     "Negate": "要否定搜索，為搜索添加一個減號或單詞「not」前綴，例如「{{notexample}}」或「{{notexample2}}」。",
@@ -280,9 +290,9 @@
     "PerkName": "Shows items with a perk or mod whose name matches (exactperk:) or partially matches (perkname:) the filter text. Search for entire phrases using quotes.",
     "PinnacleReward": "顯示提供巔峰獎勵的追獵目標。",
     "Postmaster": "目前在郵政官處的物品.",
+    "PowerfulReward": "顯示提供強力獎勵的追獵目標。",
     "PowerKeywords": "使用 pinnaclecap 或 softcap 關鍵字而不是數字來表達當前賽季的光等限制。",
     "PowerLevel": "按能量等級顯示物品。$t(Filter.PowerKeywords)",
-    "PowerfulReward": "顯示提供強力獎勵的追獵目標。",
     "PrismaticDamageType": "Shows items based on if they are a light or darkness damage type. Light types are arc, solar, and void. Darkness types are stasis and strand.",
     "Quality": "根據其統計品質百分比來顯示物品'{{percentage}}'別名'{{quality}}'.",
     "RandomRoll": "顯示可以隨機特性掉落的物品",
@@ -294,9 +304,9 @@
     "SearchPrompt": "搜索可用的過濾器命令",
     "Season": "按照物品推出季度顯示.",
     "Shiny": "Shows BRAVE weapons with a limited-edition ornament.",
+    "Stackable": "顯示可以堆疊的物品(合成彈藥,奇怪硬幣等)",
     "StackFull": "顯示堆疊已滿的物品 (强化覈心、奇异硬幣、槍匠資料等)",
     "StackLevel": "根據堆疊數量來顯示物品.",
-    "Stackable": "顯示可以堆疊的物品(合成彈藥,奇怪硬幣等)",
     "StatLower": "顯示相比其他同類別護甲而言屬性全面更低的護甲。",
     "Stats": "按某個屬性值顯示物品。$t(Filter.StatsExtras)",
     "StatsBase": "按基礎屬性值篩選護甲，不包含附加模組或大師傑作内容。$t(Filter.StatsExtras)",
@@ -367,6 +377,7 @@
     "FilterHelpOptimizer": "搜索防具：{{example}}",
     "FilterHelpProgress": "搜索里程碑和懸賞",
     "FilterHelpRecords": "搜索成就和收藏品",
+    "FilterMatchCount_one": "",
     "FilterMatchCount_other": "{{count}} 個物品",
     "Filters": "篩檢程式",
     "InstallDIM": "安裝為 App",
@@ -413,14 +424,24 @@
     "Tab": "TAB",
     "Vault": "將物品存入保險庫"
   },
+  "Infusion": {
+    "Filter": "過濾物品",
+    "InfuseSource": "選擇需要用 {{name}} 進行灌注的物品",
+    "InfuseTarget": "選擇用於灌注 {{name}} 的物品",
+    "InfusionMaterials": "灌注材料",
+    "NoItems": "沒有可灌注的物品。",
+    "NoTransfer": "移動灌注材料\n{{target}} 無法移動。",
+    "SwitchDirection": "切換",
+    "TransferItems": "轉移"
+  },
   "InGameLoadout": {
     "ClearSlot": "清空槽位 {{index}}",
     "Create": "創建配裝",
     "CreateTitle": "從當前已裝備創建游戲内配裝。",
     "CurrentlyEquipped": "當前裝備",
-    "DeleteFailed": "刪除配裝失敗",
     "Deleted": "配裝已刪除",
     "DeletedBody": "已清除槽位 {{index}} 的游戲内配裝",
+    "DeleteFailed": "刪除配裝失敗",
     "EditFailed": "更新配裝失敗",
     "EditIdentifiers": "編輯標識",
     "EditTitle": "編輯配裝名稱和圖標",
@@ -433,16 +454,6 @@
     "Save": "更新配裝",
     "SaveIdentifiers": "Update Identifiers",
     "SnapshotFailed": "為已裝備的配裝創建快照時失敗"
-  },
-  "Infusion": {
-    "Filter": "過濾物品",
-    "InfuseSource": "選擇需要用 {{name}} 進行灌注的物品",
-    "InfuseTarget": "選擇用於灌注 {{name}} 的物品",
-    "InfusionMaterials": "灌注材料",
-    "NoItems": "沒有可灌注的物品。",
-    "NoTransfer": "移動灌注材料\n{{target}} 無法移動。",
-    "SwitchDirection": "切換",
-    "TransferItems": "轉移"
   },
   "Inventory": {
     "ClickToExpand": "(點擊展開)"
@@ -542,10 +553,10 @@
       "LightMode": "光亮模式"
     },
     "Loading": "裝備最佳套裝",
-    "LockEquipped": "鎖定裝備",
-    "LockPerk": "鎖定特性",
     "Locked": "鎖定的物品",
     "LockedHelp": "拖放物品到選擇框中用以創建一個套裝組.使用Shift +按一下可移除物品.",
+    "LockEquipped": "鎖定裝備",
+    "LockPerk": "鎖定特性",
     "Missing2": "缺少稀有,傳奇,或異域物品用來打造套裝!",
     "ProcessingMode": {
       "Fast": "快速",
@@ -643,8 +654,8 @@
       "Masterworked": "+2 in each stat, assumed energy level 10.",
       "None": "All armor: $t(LoadoutBuilder.AssumeMasterworkOptions.Current)"
     },
-    "AutoStatMods": "自動添加屬性模組",
     "AutomaticallyPicked": "此模組已被自動添加以優化配裝屬性。",
+    "AutoStatMods": "自動添加屬性模組",
     "ChooseAlternateTitle": "選擇另一個物品",
     "CompareLoadout": "對比配裝",
     "ConfirmOverwrite": "你確定要用這套新的護甲來替換配裝「{{name}}」里的護甲嗎？",
@@ -652,9 +663,9 @@
     "DisabledByAutoStatMods": "屬性模組由配裝優化器自動選取。",
     "DisabledDueToMaintenance": "由於 Bungie API 維護，配裝優化器目前不可用。",
     "EquipItems": "裝備",
+    "ExcludedItems": "已排除的物品",
     "ExcludeItem": "排除項目",
     "ExcludeVendors": "Search \"-is:vendor\" to exclude vendor items from Loadout Optimizer.",
-    "ExcludedItems": "已排除的物品",
     "ExistingLoadout": "已有配裝",
     "Exotic": "Exotic Armor",
     "ExoticSpecialCategory": "特殊",
@@ -741,19 +752,19 @@
     "CancelEditing": "取消編輯",
     "CannotCustomizeSubclass": "無法配置此子職業",
     "ChooseItem": "添加 {{name}}",
+    "Classified": "你的某些物品是隱藏的，因此不能用於到最大光等的計算之中。",
     "ClassType": "Any class loadout",
-    "ClassTypeMismatch": "無法將 {{className}} 項添加到此配裝中",
-    "ClassTypeMissing": "您沒有 {{className}} 來為其創建配裝",
     "ClassType_female": "{{className}} loadout",
     "ClassType_male": "{{className}} loadout",
-    "Classified": "你的某些物品是隱藏的，因此不能用於到最大光等的計算之中。",
+    "ClassTypeMismatch": "無法將 {{className}} 項添加到此配裝中",
+    "ClassTypeMissing": "您沒有 {{className}} 來為其創建配裝",
+    "ClearingSpace": "正在移走其他物品",
     "ClearLoadoutParameters": "刪除配裝優化器設置",
     "ClearSection": "移除所有",
     "ClearSpace": "移除其他物品",
     "ClearSpaceArmor": "移除其他護甲",
     "ClearSpaceWeapons": "移除其他武器",
     "ClearUnsetMods": "移除其它模組",
-    "ClearingSpace": "正在移走其他物品",
     "CopyAndEdit": "Edit Copy",
     "Create": "創建配裝",
     "CurrentlyEquipped": "當前裝備",
@@ -783,10 +794,11 @@
       "PasteHere": "粘貼一個配裝連結以打開配裝。"
     },
     "ImportLoadout": "導入配裝",
-    "InGameActions": "In-Game Loadout Actions",
-    "InGameLoadouts": "游戲内配裝",
     "IncludeRuntimeStatBenefits": "Include Font mod stats",
     "IncludeRuntimeStatBenefitsDesc": "\"Font of ...\" armor mods provide a flat boost to character stats while you have Armor Charges.\n\nWith this setting, DIM considers these mods active and adds their benefits to this Loadout's stats in calculations and optimizations.",
+    "InGameActions": "In-Game Loadout Actions",
+    "InGameLoadouts": "游戲内配裝",
+    "ItemErrorSummary_one": "",
     "ItemErrorSummary_other": "{{count}} 個物品出錯：",
     "ItemLeveling": "物品等級",
     "LoadoutName": "配裝名稱",
@@ -796,23 +808,27 @@
     "LoadoutParametersStats": "Stat priorities and minimum/maximum stat ranges",
     "Loadouts": "配裝",
     "MakeRoom": "為郵政官騰出空間",
+    "MakeRoomDone_one": "",
+    "MakeRoomDone_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
     "MakeRoomDone_female_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
     "MakeRoomDone_male_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
-    "MakeRoomDone_other": "通過從{{store}} 上移動了{{movedNum}} 項物品，成功為郵政官騰出了{{count}} 個物品空間。",
     "MakeRoomError": "無法為郵政官騰出物品空間:{{error}}.",
     "ManageLoadouts": "管理配裝",
-    "MaxSlots": "一個配裝中只能有 {{slots}} 個 {{bucketName}}",
     "MaximizeLight": "最高光等",
     "MaximizePower": "最大光能等級",
     "MaximizeStat": "最高屬性",
+    "MaxSlots": "一個配裝中只能有 {{slots}} 個 {{bucketName}}",
     "MissingItemsWarning": "此配裝中的某些項目不再在您的庫存中。",
+    "ModErrorSummary_one": "",
     "ModErrorSummary_other": "{{count}} 個模組出錯：",
     "ModPlacement": {
       "InvalidMods": "無效模組",
+      "InvalidModsDesc_one": "",
       "InvalidModsDesc_other": "{{count}} 個模組不能插入任何防具。",
       "ModPlacement": "模組位置",
       "StackableMod": "Stackable",
       "UnassignedMods": "未分配的模組",
+      "UnassignedModsDesc_one": "",
       "UnassignedModsDesc_other": "由於容量或插槽不足，{{count}} 個模組無法安裝。即使為所選護甲升級容量也是如此。",
       "UnstackableMod": "Not Stackable",
       "UpgradeCosts": "升級消耗",
@@ -821,14 +837,14 @@
     "Mods": "模組",
     "ModsOnly": "Mods-only",
     "MoveItems": "正在移動物品",
-    "NoSpace": "你的保險庫和其他角色均已滿。",
     "NoneMatch": "沒有與篩檢程式匹配的配裝.",
-    "NotStarted": "正在等待其它操作完成，或物品欄刷新完畢",
+    "NoSpace": "你的保險庫和其他角色均已滿。",
     "NotesPlaceholder": "爲此配裝添加備注，或使用 #標簽 分類 （目前不支持中文）",
     "NotificationTitle": "配裝:{{name}}",
+    "NotStarted": "正在等待其它操作完成，或物品欄刷新完畢",
+    "OnlyItems": "只有可裝備物品,材料和消耗品才可以載入.",
     "OnWrongCharacterAdvice": "點此查找此角色最高光等的物品。",
     "OnWrongCharacterWarning": "當前角色的光等最高的防具在其他角色的物品欄中，要使强大裝備和巔峰裝備掉落時的光等達到最高，這些防具必須存儲在當前角色的物品欄或是保險庫中。",
-    "OnlyItems": "只有可裝備物品,材料和消耗品才可以載入.",
     "OpenInOptimizer": "防具優化",
     "OpenOnStreamDeck": "Open on Stream Deck",
     "PickArmor": "選擇防具",
@@ -842,9 +858,10 @@
     "PullFromPostmaster": "從郵政官處取回物品",
     "PullFromPostmasterError": "無法從郵政官處取回物品:{{error}}.",
     "PullFromPostmasterGeneralError": "無法從郵政官拉取所有物品。",
+    "PullFromPostmasterNotification_one": "",
+    "PullFromPostmasterNotification_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
     "PullFromPostmasterNotification_female_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
     "PullFromPostmasterNotification_male_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
-    "PullFromPostmasterNotification_other": "正在從郵政官處取回{{count}} 項物品至{{store}}.",
     "PullFromPostmasterPopupTitle": "從郵政官處取回物品",
     "Random": "隨機",
     "Randomize": "隨機配装",
@@ -874,7 +891,9 @@
       "LoadoutOptimizer": "配裝優化器設置",
       "NativeShare": "分享連結",
       "Notes": "備注",
+      "NumItems_one": "",
       "NumItems_other": "{{count}} 個項目 - 將提示被分享者從他們的庫存中選擇可比較的項目",
+      "NumMods_one": "",
       "NumMods_other": "{{count}} 個模組",
       "Placeholder": "正在載入分享連結",
       "Subclass": "自定義子職業",
@@ -909,8 +928,8 @@
     "PinnacleCap": "巔峰上限",
     "PowerFloor": "能量下限",
     "PowerfulCap": "强力上限",
-    "SeasonEnds": "賽季結束于 ",
     "SeasonalRank": "賽季等級 {{rank}}",
+    "SeasonEnds": "賽季結束于 ",
     "SoftCap": "軟上限",
     "Special": "特殊事件挑戰",
     "Tutorial": "挑戰教程",
@@ -988,6 +1007,7 @@
     "Vault": "保險庫",
     "WeaponLevel": "武器等级{{level}}"
   },
+  "no-space": "空間不足",
   "Notes": {
     "Error": "錯誤! 備註不能超過120個字元.",
     "Help": "添加備注、#標簽、和 :symbols:"
@@ -1027,8 +1047,8 @@
       "Locked": "已鎖定",
       "MasterworkStat": "MW Stat",
       "MasterworkTier": "MW Tier",
-      "ModSlot": "模組槽位",
       "Mods": "模組",
+      "ModSlot": "模組槽位",
       "Name": "名稱",
       "New": "新",
       "Notes": "備注",
@@ -1069,11 +1089,11 @@
       "Airborne": "空運效率",
       "AmmoGeneration": "Ammo Gen",
       "Power": "光等",
-      "RPM": "彈夾數每分鐘",
       "Recoil": "後坐力",
-      "Reload": "重新裝彈"
+      "Reload": "重新裝彈",
+      "RPM": "彈夾數每分鐘"
     },
-    "Unlock": "解鎖​​​​"
+    "Unlock": "解鎖\u200b\u200b\u200b\u200b"
   },
   "PostmasterWarningBanner": {
     "PostmasterAlmostFull": "郵政官快滿了！({{number}}/{{postmasterSize}}）",
@@ -1089,6 +1109,7 @@
     "PaleHeartPathfinder": "Pale Heart Pathfinder",
     "PercentMax": "{{pct}}% to maximum",
     "PercentPrestige": "重置百分比{{pct}}%",
+    "PointsUsed_one": "",
     "PointsUsed_other": "{{count}} points used",
     "PowerBonusHeader": "+{{powerBonus}} 光等獎勵",
     "PowerBonusHeaderUndefined": "其他獎勵",
@@ -1099,6 +1120,7 @@
     "Quests": "任務",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}點",
+    "Resets_one": "",
     "Resets_other": "{{count}} 次重置",
     "SeasonalHub": "Seasonal Hub",
     "StatTrackers": "數據追蹤器",
@@ -1120,7 +1142,7 @@
     "Item": "Item Searches",
     "Link": "查看和編輯搜索歷史",
     "Loadout": "Loadout Searches",
-    "Query": "搜索​​​​",
+    "Query": "搜索\u200b\u200b\u200b\u200b",
     "Title": "搜索歷史",
     "UsageCount": "使用次數"
   },
@@ -1176,8 +1198,8 @@
     "ResetToDefault": "重設",
     "ReverseSort": "切換正向/反向排序",
     "SetSort": "物品排序方式:",
-    "SetVaultWeaponGrouping": "Group vault weapons by:",
     "Settings": "設定",
+    "SetVaultWeaponGrouping": "Group vault weapons by:",
     "ShowNewItems": "在新物品上顯示紅點",
     "SingleCharacter": "單角色視圖",
     "SingleCharacterExplanation": "DIM將只顯示最近一次遊玩的角色。\n如果隱藏的角色持有當前角色可用的物品，它們會被顯示在保險庫裏。\n其他職業獨有的物品會被完全隱藏。",
@@ -1199,6 +1221,7 @@
     "SortByWeaponElement": "傷害類型",
     "SortCustom": "自訂排序",
     "SortName": "名稱",
+    "SpacesSize_one": "",
     "SpacesSize_other": "{{count}} 個空位",
     "Theme": "主題",
     "VaultArmorGroupingStyle": "Separate armor on different lines by class",
@@ -1258,8 +1281,8 @@
     "NoBonus": "無加成",
     "NotApplicable": "不可用",
     "OfMaxRoll": "最大下拉範圍{{range}}",
-    "PercentHelp": "點擊獲取更多關於品質屬性的資訊.",
     "Percentage": "%",
+    "PercentHelp": "點擊獲取更多關於品質屬性的資訊.",
     "PowerModifier": "季節神器提升光等",
     "Prestige": "威望等級: {{level}}\n{{exp}}xp 于5明亮之塵之前.",
     "Quality": "品質",
@@ -1324,6 +1347,7 @@
     "UpdateInvalid": "Failed to save data to DIM Sync",
     "UpdateInvalidBody": "Data sent to DIM Sync was invalid and will not be saved.",
     "UpdateInvalidBodyLoadout": "The loadout \"{{name}}\" is invalid and will not be saved. If you imported it from another site, please let them know that they are exporting invalid loadouts.",
+    "UpdateQueueLength_one": "",
     "UpdateQueueLength_other": "我們將在能重新連接時保存 {{count}} 個新更改。",
     "Usage": "DIM 使用了此設備{{quota, humanBytes}}可用空間中的{{usage, humanBytes}}.這包括從 bungie. net 下載的命運2物品資料庫。"
   },
@@ -1460,6 +1484,7 @@
     }
   },
   "WishListRoll": {
+    "BestRatedTip_one": "",
     "BestRatedTip_other": "這些特性與您願望清單上的某個武器完全匹配。",
     "Clear": "清除愿望清单",
     "CopiedLine": "已複製願望清單特性組合到剪貼板",
@@ -1482,8 +1507,8 @@
     "UpdateExternalSource": "Add Wish List",
     "Voltron": "voltron（默認）",
     "WishListNotes": "願望清單備註：",
+    "WorstRatedTip_one": "",
     "WorstRatedTip_other": "這些特性與您垃圾清單上的某個武器完全匹配。"
   },
-  "no-space": "空間不足",
   "wrong-level": "等級錯誤"
 }
