--- a/src/locale/zhCHS.json
+++ b/src/locale/zhCHS.json
@@ -1,17 +1,9 @@
 {
-  "AWA": {
-    "ConfirmDescription": "请使用\"命运2同伴应用\"授予DIM修改您物品的权限。",
-    "ConfirmTitle": "确认操作",
-    "Error": "更改模组或特性时出错",
-    "ErrorMessage": "我们无法将{{plug}}装备到{{item}}。\n\n{{error}}",
-    "FailedToken": "无权限更换物品",
-    "IrreversiblePlugging": "你不拥有{{plug}}，所以我们不会覆盖它。"
-  },
   "Accounts": {
     "Choose": "{{bungieName}} 的档案",
+    "ErrorLoading": "无法从 Bungie.net 加载命运账户",
     "ErrorLoadInventory": "无法加载你的《命运 {{version}}》角色和库存",
     "ErrorLoadManifest": "无法从 Bungie 加载命运信息数据库",
-    "ErrorLoading": "无法从 Bungie.net 加载命运账户",
     "MissingAccountWarning": "如果你的账户没有显示，你可能登录了错误的 Bungie.net 账户，或 Bungie.net 可能正在停机维护。",
     "MissingDescription": "你试图查看的账户并未连接到你的 Bungie.net 账户。请在下方选择你的账户。",
     "MissingTitle": "找不到账户",
@@ -34,10 +26,20 @@
     "NoNotes": "无注释",
     "OpenInArmory": "查看武器详情",
     "Season": "年 {{year}}，第 {{season}} 赛季",
+    "TrashlistedRolls_one": "",
     "TrashlistedRolls_other": "{{count, number}} 个垃圾列表特性组合",
     "Unknown": "未知物品",
+    "WishlistedRolls_one": "",
     "WishlistedRolls_other": "{{count, number}} 个愿望清单特性组合",
     "YourItems": "你的物品"
+  },
+  "AWA": {
+    "ConfirmDescription": "请使用\"命运2同伴应用\"授予DIM修改您物品的权限。",
+    "ConfirmTitle": "确认操作",
+    "Error": "更改模组或特性时出错",
+    "ErrorMessage": "我们无法将{{plug}}装备到{{item}}。\n\n{{error}}",
+    "FailedToken": "无权限更换物品",
+    "IrreversiblePlugging": "你不拥有{{plug}}，所以我们不会覆盖它。"
   },
   "Browsercheck": {
     "Samsung": "启用深色模式时，三星浏览器可能会导致网页显示过于黑暗。在设置 > 通用 > 使用网页深色主题或使用其他浏览器来解决此问题。",
@@ -62,6 +64,7 @@
     "Confirm": "更新备注",
     "Remove": "从备注中删除 / 删除 #标签",
     "Replace": "替换备注",
+    "Title_one": "",
     "Title_other": "更改 {{count}} 个物品的备注"
   },
   "BungieAlert": {
@@ -112,13 +115,15 @@
     "Super": "超能冷却：{{cooldown}}"
   },
   "Countdown": {
-    "Days_compact_other": "{{count}}天",
-    "Days_other": "{{count}} 天"
+    "Days_one": "",
+    "Days_other": "{{count}} 天",
+    "Days_compact_other": "{{count}}天"
   },
   "Csv": {
     "EmptyFile": "文件中没有行",
     "ImportConfirm": "您确定要从CSV导入标签/笔记？这将覆盖您电子表格中所包含的所有项目/标记。",
     "ImportFailed": "从 CSV 导入标签/注释失败: {{error}}",
+    "ImportSuccess_one": "",
     "ImportSuccess_other": "为{{count}} 个物品加载的标签/注释。",
     "ImportWrongFileType": "此文件不是一个CSV文件。",
     "WrongFields": "CSV文件中必须有'Id', 'Notes', 'Tag', 'Hash'列 (编号, 注释, 标签, 哈希)"
@@ -145,12 +150,14 @@
     "Troubleshooting": "故障排除指南"
   },
   "FarmingMode": {
+    "D2Desc_one": "",
+    "D2Desc_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
     "D2Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
     "D2Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
-    "D2Desc_other": "为防止有物品被寄送到邮政官处，DIM 正确保 {{store}} 上的每个物品种类都留有 {{count}} 个空位。",
+    "Desc_one": "",
+    "Desc_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "Desc_female_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "Desc_male_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
-    "Desc_other": "为防止有物品被寄送到邮政官处，DIM 正将 {{store}} 上的记忆水晶和微光物品移动到保险库，并确保每个物品种类都留有 {{count}} 个空位。",
     "FarmingMode": "收集模式",
     "FarmingModeNote": "（为掉落物留出空间）",
     "MakeRoom": {
@@ -194,8 +201,11 @@
     "ArmorIntrinsic": "显示带有固有特性的传说护甲，例如诡计护甲。",
     "Ascended": "显示可提升光等且已提升的物品。",
     "Breaker": "根据反勇士类型或对应的勇士类型过滤。使用 breaker:instrinsic 搜索具有内置反勇士能力的装备。",
+    "BulkClear_one": "",
     "BulkClear_other": "移除 {{count}} 件物品标签。",
+    "BulkRevert_one": "",
     "BulkRevert_other": "恢复 {{count}} 件物品标签。",
+    "BulkTag_one": "",
     "BulkTag_other": "将 {{count}} 件选择物品标记为 {{tag}}。",
     "Catalyst": "按状态显示催化。catalyst:complete 显示你已解锁并应用的催化，catalyst:incomplete 显示你已解锁但尚未完成目标且应用的催化，而 catalyst:missing 显示你尚未解锁催化的物品。",
     "Class": "按照职业类别显示.",
@@ -238,11 +248,11 @@
     "HasOrnament": "显示已应用皮肤的物品。",
     "HasShader": "显示已应用着色器的物品",
     "InDimLoadout": "is:indimgameloadout 指令会显示全部DIM配装中的物品。",
+    "Infusable": "显示可以灌注的物品.",
+    "InfusionFodder": "显示可用于灌注同类物品且只消耗微光的物品。",
     "InInGameLoadout": "is:iningameloadout 指令会显示任何游戏内配装系统保存的物品。",
     "InInventory": "显示在库存中已拥有的物品。仅在商贩和记录页面中有效。",
     "InLoadout": "is:inloadout 指令显示在全部配装中包含的物品。在 inloadout: 指令下搜索可显示所有配装中的与搜索名称相符的物品。在 inloadout: 指令后使用#标签可显示配装中有含有该标签的物品或注释。若指定范围，则显示在多个配装中的物品。",
-    "Infusable": "显示可以灌注的物品.",
-    "InfusionFodder": "显示可用于灌注同类物品且只消耗微光的物品。",
     "IsAdept": "显示可安装专家模组的武器。",
     "IsCrafted": "显示制作获取的武器。",
     "ItemHash": "显示具有给定物品 hash 的物品。此为高级用户选项。",
@@ -263,10 +273,10 @@
     "MaxPower": "显示每个槽位最高光等的物品。",
     "MaxPowerLoadout": "显示每个职业中能最大化光等的配装物品。",
     "Memento": "显示包含纪念物插槽的武器。",
-    "ModSlot": "显示带有特定类型模组插槽的护甲。",
     "Mods": {
       "Y3": "显示启用防具2.0模组的物品"
     },
+    "ModSlot": "显示带有特定类型模组插槽的护甲。",
     "Name": "使用 (exactname:) 精确搜索某名称的物品，或使用 (name:) 搜索部分匹配某名称的物品。使用引号搜索整个词条。",
     "NamedStat": "显示重要防具.",
     "Negate": "要否定搜索，为搜索添加一个减号或单词“not”前缀，例如“{{notexample}}”或“{{notexample2}}”。",
@@ -280,9 +290,9 @@
     "PerkName": "使用 (exactperk:) 精确搜索某特性或模组的物品，或使用 (perkname:) 搜索部分匹配某特性或模组的物品。使用引号搜索整个词条。",
     "PinnacleReward": "显示提供巅峰奖励的追猎目标。",
     "Postmaster": "目前在邮政官处的物品.",
+    "PowerfulReward": "显示提供强力奖励的追猎目标。",
     "PowerKeywords": "使用 pinnaclecap 或 softcap 关键字而不是数字来表达当前赛季的光等限制。",
     "PowerLevel": "按能量等级显示物品。$t(Filter.PowerKeywords)",
-    "PowerfulReward": "显示提供强力奖励的追猎目标。",
     "PrismaticDamageType": "根据伤害类型为光能或暗影来显示物品。光能类型为电弧，烈日和虚空。暗影类型为冰影和缚丝。",
     "Quality": "根据其统计品质百分比来显示物品'{{percentage}}'别名'{{quality}}'.",
     "RandomRoll": "显示可以随机特性掉落的物品",
@@ -294,9 +304,9 @@
     "SearchPrompt": "搜索可用的过滤器命令",
     "Season": "根据物品推出的赛季显示。",
     "Shiny": "显示带有限定版皮肤的武器（可从英勇军械库、玖的仪式等获得）。",
+    "Stackable": "显示可堆叠的物品（弹药合成器、奇异硬币等）",
     "StackFull": "显示堆叠已满的物品（强化核心、奇异硬币、枪匠材料等）",
     "StackLevel": "根据堆叠数量来显示物品。",
-    "Stackable": "显示可堆叠的物品（弹药合成器、奇异硬币等）",
     "StatLower": "显示相比其他同类别护甲而言属性全面更低的护甲。",
     "Stats": "按某个属性值显示物品。$t(Filter.StatsExtras)",
     "StatsBase": "按基础属性值筛选护甲，不包含附加模组或大师杰作属性。$t(Filter.StatsExtras)",
@@ -367,6 +377,7 @@
     "FilterHelpOptimizer": "选择用于配装的护甲: {{example}}",
     "FilterHelpProgress": "搜索里程碑和悬赏",
     "FilterHelpRecords": "搜索成就和收藏品",
+    "FilterMatchCount_one": "",
     "FilterMatchCount_other": "{{count}} 个物品",
     "Filters": "过滤器",
     "InstallDIM": "安装为 App",
@@ -413,14 +424,24 @@
     "Tab": "TAB",
     "Vault": "将物品存入保险库"
   },
+  "Infusion": {
+    "Filter": "过滤物品",
+    "InfuseSource": "选择需要用 {{name}} 进行灌注的物品",
+    "InfuseTarget": "选择用于灌注 {{name}} 的物品",
+    "InfusionMaterials": "灌注材料",
+    "NoItems": "没有可灌注的物品。",
+    "NoTransfer": "移动灌注材料\n{{target}} 无法移动。",
+    "SwitchDirection": "切换",
+    "TransferItems": "转移"
+  },
   "InGameLoadout": {
     "ClearSlot": "清空槽位 {{index}}",
     "Create": "创建配装",
     "CreateTitle": "从当前装备创建游戏内配装",
     "CurrentlyEquipped": "当前装备",
-    "DeleteFailed": "删除配装失败",
     "Deleted": "配装已删除",
     "DeletedBody": "已清除槽位 {{index}} 的游戏内配装",
+    "DeleteFailed": "删除配装失败",
     "EditFailed": "更新配装失败",
     "EditIdentifiers": "编辑标识",
     "EditTitle": "编辑配装名字和图标",
@@ -433,16 +454,6 @@
     "Save": "更新配装",
     "SaveIdentifiers": "更新标识",
     "SnapshotFailed": "为当前配装创建快照时失败"
-  },
-  "Infusion": {
-    "Filter": "过滤物品",
-    "InfuseSource": "选择需要用 {{name}} 进行灌注的物品",
-    "InfuseTarget": "选择用于灌注 {{name}} 的物品",
-    "InfusionMaterials": "灌注材料",
-    "NoItems": "没有可灌注的物品。",
-    "NoTransfer": "移动灌注材料\n{{target}} 无法移动。",
-    "SwitchDirection": "切换",
-    "TransferItems": "转移"
   },
   "Inventory": {
     "ClickToExpand": "（点击展开）"
@@ -542,10 +553,10 @@
       "LightMode": "光亮模式"
     },
     "Loading": "正在载入最佳套装",
-    "LockEquipped": "锁定装备",
-    "LockPerk": "锁定特性",
     "Locked": "锁定的物品",
     "LockedHelp": "拖放物品到选择框中用以创建一个套装组.使用Shift +单击可移除物品.",
+    "LockEquipped": "锁定装备",
+    "LockPerk": "锁定特性",
     "Missing2": "缺少稀有,传奇,或异域物品用来打造套装!",
     "ProcessingMode": {
       "Fast": "快速",
@@ -643,8 +654,8 @@
       "Masterworked": "每项属性值 +2，假定能量等级为 10。",
       "None": "所有护甲：$t(LoadoutBuilder.AssumeMasterworkOptions.Current)"
     },
-    "AutoStatMods": "自动添加属性模组",
     "AutomaticallyPicked": "此模组已被自动添加以优化配装属性。",
+    "AutoStatMods": "自动添加属性模组",
     "ChooseAlternateTitle": "选择另一个物品",
     "CompareLoadout": "对比配装",
     "ConfirmOverwrite": "你确定要用这套新的护甲来替换配装“{{name}}”里的护甲吗？",
@@ -652,9 +663,9 @@
     "DisabledByAutoStatMods": "配装优化器正在自动选择属性模组。",
     "DisabledDueToMaintenance": "由于 Bungie API 维护，配装优化器目前不可用。",
     "EquipItems": "装备",
+    "ExcludedItems": "已排除的物品",
     "ExcludeItem": "排除项目",
     "ExcludeVendors": "搜索 \"-is:vendor\" 以在配装优化器中排除来自商人的物品。",
-    "ExcludedItems": "已排除的物品",
     "ExistingLoadout": "已有配装",
     "Exotic": "异域护甲",
     "ExoticSpecialCategory": "特殊",
@@ -741,19 +752,19 @@
     "CancelEditing": "取消编辑",
     "CannotCustomizeSubclass": "无法配置此子职业",
     "ChooseItem": "添加 {{name}}",
+    "Classified": "你的某些物品是隐藏的，因此不能用于到最大光等的计算之中。",
     "ClassType": "全职业配装",
-    "ClassTypeMismatch": "不能将{{className}}物品添加到此配装",
-    "ClassTypeMissing": "你没有{{className}}，因此不能为其创建配装",
     "ClassType_female": "{{className}} 配装",
     "ClassType_male": "{{className}} 配装",
-    "Classified": "你的某些物品是隐藏的，因此不能用于到最大光等的计算之中。",
+    "ClassTypeMismatch": "不能将{{className}}物品添加到此配装",
+    "ClassTypeMissing": "你没有{{className}}，因此不能为其创建配装",
+    "ClearingSpace": "正在移走其他物品",
     "ClearLoadoutParameters": "清除配装优化器设置",
     "ClearSection": "清除所有",
     "ClearSpace": "移除其他物品",
     "ClearSpaceArmor": "移除其他护甲",
     "ClearSpaceWeapons": "移除其他武器",
     "ClearUnsetMods": "移除其他模组",
-    "ClearingSpace": "正在移走其他物品",
     "CopyAndEdit": "编辑副本",
     "Create": "创建配装",
     "CurrentlyEquipped": "当前装备",
@@ -783,10 +794,11 @@
       "PasteHere": "粘贴链接以打开配装。"
     },
     "ImportLoadout": "导入配装",
-    "InGameActions": "游戏内配装操作",
-    "InGameLoadouts": "游戏内配装",
     "IncludeRuntimeStatBenefits": "包括洗礼属性加成",
     "IncludeRuntimeStatBenefitsDesc": "属性洗礼护甲模组会在你拥有护甲充能时提供固定的属性增益。\n在该设置下，DIM 将视此类模组为生效状态，并将其增益用于配装属性的计算和优化。",
+    "InGameActions": "游戏内配装操作",
+    "InGameLoadouts": "游戏内配装",
+    "ItemErrorSummary_one": "",
     "ItemErrorSummary_other": "{{count}} 个物品出错：",
     "ItemLeveling": "物品等级",
     "LoadoutName": "配装名称",
@@ -796,23 +808,27 @@
     "LoadoutParametersStats": "属性优先级和最低/最高属性范围",
     "Loadouts": "配装",
     "MakeRoom": "为邮政官腾出空间",
+    "MakeRoomDone_one": "",
+    "MakeRoomDone_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomDone_female_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomDone_male_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
-    "MakeRoomDone_other": "通过从{{store}} 上移动了{{movedNum}} 项物品，成功为邮政官腾出了{{count}} 个物品空间。",
     "MakeRoomError": "无法为邮政官腾出物品空间:{{error}}.",
     "ManageLoadouts": "管理配装",
-    "MaxSlots": "一个配装里最多只能有 {{slots}} 个{{bucketName}}。",
     "MaximizeLight": "最大光等",
     "MaximizePower": "最大能量等级",
     "MaximizeStat": "最高属性",
+    "MaxSlots": "一个配装里最多只能有 {{slots}} 个{{bucketName}}。",
     "MissingItemsWarning": "该配装中部分物品已不在你的背包中。",
+    "ModErrorSummary_one": "",
     "ModErrorSummary_other": "{{count}} 个模组出错：",
     "ModPlacement": {
       "InvalidMods": "无效模组",
+      "InvalidModsDesc_one": "",
       "InvalidModsDesc_other": "有 {{count}} 个模组不能安装到任何护甲上。",
       "ModPlacement": "模组位置",
       "StackableMod": "可叠加",
       "UnassignedMods": "未分配的模组",
+      "UnassignedModsDesc_one": "",
       "UnassignedModsDesc_other": "由于能量容量或模组插槽不足，{{count}} 个模组无法安装。即便为所选护甲升级能量也是如此。",
       "UnstackableMod": "不可叠加",
       "UpgradeCosts": "升级消耗成本",
@@ -821,14 +837,14 @@
     "Mods": "模组",
     "ModsOnly": "仅限模组",
     "MoveItems": "正在移动物品",
-    "NoSpace": "你的保险库和其他角色均已满。",
     "NoneMatch": "没有与过滤器匹配的配装。",
-    "NotStarted": "正在等待其他操作完成或物品栏刷新完毕",
+    "NoSpace": "你的保险库和其他角色均已满。",
     "NotesPlaceholder": "为此配装添加备注，或使用 #标签 进行分类",
     "NotificationTitle": "配装：{{name}}",
+    "NotStarted": "正在等待其他操作完成或物品栏刷新完毕",
+    "OnlyItems": "只有可装备物品、材料和消耗品才可以被添加到配装。",
     "OnWrongCharacterAdvice": "点此查找当前角色的最高光等物品。",
     "OnWrongCharacterWarning": "当前角色光等最高的护甲在其他角色上。要使强力装备和巅峰装备掉落时的光等达到最高，这些护甲必须存储在当前角色上或是保险库中。",
-    "OnlyItems": "只有可装备物品、材料和消耗品才可以被添加到配装。",
     "OpenInOptimizer": "优化护甲",
     "OpenOnStreamDeck": "在 Stream Deck 上打开",
     "PickArmor": "选择护甲",
@@ -842,9 +858,10 @@
     "PullFromPostmaster": "从邮政官处取回物品",
     "PullFromPostmasterError": "无法从邮政官处取回物品:{{error}}.",
     "PullFromPostmasterGeneralError": "无法从邮政官拉取所有物品。",
+    "PullFromPostmasterNotification_one": "",
+    "PullFromPostmasterNotification_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
     "PullFromPostmasterNotification_female_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
     "PullFromPostmasterNotification_male_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
-    "PullFromPostmasterNotification_other": "正在从邮政官处取回{{count}} 项物品至{{store}}。",
     "PullFromPostmasterPopupTitle": "从邮政官处取回物品",
     "Random": "随机",
     "Randomize": "随机配装",
@@ -874,7 +891,9 @@
       "LoadoutOptimizer": "配装优化器设置",
       "NativeShare": "分享链接",
       "Notes": "备注",
+      "NumItems_one": "",
       "NumItems_other": "{{count}} 个物品 - 被分享者需要从他们的库存中选择替代物品",
+      "NumMods_one": "",
       "NumMods_other": "{{count}} 个模组",
       "Placeholder": "正在加载分享链接",
       "Subclass": "自定义子职业",
@@ -909,8 +928,8 @@
     "PinnacleCap": "巅峰上限",
     "PowerFloor": "能量下限",
     "PowerfulCap": "强力上限",
-    "SeasonEnds": "赛季结束于 ",
     "SeasonalRank": "赛季等级 {{rank}}",
+    "SeasonEnds": "赛季结束于 ",
     "SoftCap": "软上限",
     "Special": "特殊事件挑战",
     "Tutorial": "挑战教程",
@@ -988,6 +1007,7 @@
     "Vault": "保险库",
     "WeaponLevel": "武器等级 {{level}}"
   },
+  "no-space": "空间不足",
   "Notes": {
     "Error": "错误! 备注不能超过120个字符.",
     "Help": "添加备注、#标签、和 :符号:"
@@ -1027,8 +1047,8 @@
       "Locked": "已锁定",
       "MasterworkStat": "大师杰作属性",
       "MasterworkTier": "大师杰作等级",
-      "ModSlot": "模组槽位",
       "Mods": "模组",
+      "ModSlot": "模组槽位",
       "Name": "名称",
       "New": "新",
       "Notes": "备注",
@@ -1069,11 +1089,11 @@
       "Airborne": "空中效率",
       "AmmoGeneration": "弹药生成",
       "Power": "光等",
-      "RPM": "弹夹数每分钟",
       "Recoil": "后坐力",
-      "Reload": "重新装弹"
+      "Reload": "重新装弹",
+      "RPM": "弹夹数每分钟"
     },
-    "Unlock": "解锁​​​​"
+    "Unlock": "解锁\u200b\u200b\u200b\u200b"
   },
   "PostmasterWarningBanner": {
     "PostmasterAlmostFull": "邮政官快满了！({{number}}/{{postmasterSize}}）",
@@ -1089,6 +1109,7 @@
     "PaleHeartPathfinder": "苍白之心寻路者",
     "PercentMax": "{{pct}}% 最大值",
     "PercentPrestige": "重置百分比 {{pct}} %",
+    "PointsUsed_one": "",
     "PointsUsed_other": "已用 {{count}} 点",
     "PowerBonusHeader": "+{{powerBonus}} 光等奖励",
     "PowerBonusHeaderUndefined": "其他奖励",
@@ -1099,6 +1120,7 @@
     "Quests": "任务",
     "Rank": "{{name}} {{rank}}",
     "RecordValue": "{{value}}点",
+    "Resets_one": "",
     "Resets_other": "{{count}} 次重置",
     "SeasonalHub": "赛季中心",
     "StatTrackers": "数据追踪器",
@@ -1120,7 +1142,7 @@
     "Item": "物品搜索历史",
     "Link": "查看和编辑搜索历史",
     "Loadout": "配装搜索历史",
-    "Query": "搜索​​​​",
+    "Query": "搜索\u200b\u200b\u200b\u200b",
     "Title": "搜索历史",
     "UsageCount": "使用次数"
   },
@@ -1176,8 +1198,8 @@
     "ResetToDefault": "重置",
     "ReverseSort": "切换正向/反向排序",
     "SetSort": "物品排序方式：",
-    "SetVaultWeaponGrouping": "保险库武器分组方式：",
     "Settings": "设置",
+    "SetVaultWeaponGrouping": "保险库武器分组方式：",
     "ShowNewItems": "在新物品上显示红点",
     "SingleCharacter": "单角色视图",
     "SingleCharacterExplanation": "DIM 将只显示最近一次游玩的角色。\n如果隐藏的角色持有当前角色可用的物品，它们会被显示在保险库里。\n其他职业独有的物品会被完全隐藏。",
@@ -1199,6 +1221,7 @@
     "SortByWeaponElement": "伤害类型",
     "SortCustom": "自定义排序",
     "SortName": "名称",
+    "SpacesSize_one": "",
     "SpacesSize_other": "{{count}} 个空位",
     "Theme": "主题",
     "VaultArmorGroupingStyle": "将不同职业护甲隔行分开",
@@ -1258,8 +1281,8 @@
     "NoBonus": "无加成",
     "NotApplicable": "不可用",
     "OfMaxRoll": "最大下拉范围{{range}}",
-    "PercentHelp": "点击获取更多关于品质属性的信息.",
     "Percentage": "%",
+    "PercentHelp": "点击获取更多关于品质属性的信息.",
     "PowerModifier": "赛季神器光等加成",
     "Prestige": "威望等级: {{level}}\n{{exp}}xp 于5明亮之尘之前.",
     "Quality": "品质",
@@ -1324,6 +1347,7 @@
     "UpdateInvalid": "未能将数据保存到 DIM 同步",
     "UpdateInvalidBody": "发送至 DIM 同步的数据无效，未被保存。",
     "UpdateInvalidBodyLoadout": "配装 \"{{name}}\" 无效，未被保存。若您从其他网站导入了此配装，请告知发布者其配装无效。",
+    "UpdateQueueLength_one": "",
     "UpdateQueueLength_other": "我们将在能重新连接时保存 {{count}} 个新更改。",
     "Usage": "DIM 使用了此设备{{quota, humanBytes}}可用空间中的{{usage, humanBytes}}.这包括从 bungie. net 下载的命运2物品数据库。"
   },
@@ -1460,6 +1484,7 @@
     }
   },
   "WishListRoll": {
+    "BestRatedTip_one": "",
     "BestRatedTip_other": "这些特性与您愿望清单上的某个武器完全匹配。",
     "Clear": "清除愿望清单",
     "CopiedLine": "已复制愿望清单特性组合到剪贴板",
@@ -1482,8 +1507,8 @@
     "UpdateExternalSource": "添加愿望清单",
     "Voltron": "voltron（默认）",
     "WishListNotes": "愿望清单备注：",
+    "WorstRatedTip_one": "",
     "WorstRatedTip_other": "这些特性与您垃圾清单上的某个武器完全匹配。"
   },
-  "no-space": "空间不足",
   "wrong-level": "等级错误"
 }
